--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "firebase-admin": "^11.0.0",
     "prettier": "^1.18.2"
   }
 }
