--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "firebase": "^9.9.1",
     "i18n": "^0.8.3",
     "ngrok": "^4.3.1",
     "node-fetch": "^2.6.1",
